# mchain-energy

./: .augment-guidelines  .env.example  .gitignore  404.html  README.md  docker-compose.yml  index.html  index.txt  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
404/: index.html
_next/static/chunks/: 117-21b18004ff7da25c.js  54-e96784d59b405dab.js  main-1896174f38f37956.js  main-450b8aec3889852b.js  main-app-fe256659499e8eaa.js  webpack-72e094f94a270ecd.js
_next/static/chunks/app/: layout-0384e2e0dd84fa11.js  (+2 more)
_next/static/css/: 0f3fc2a937ec6219.css  a8a2b9ba98dddcf4.css
backend/: package.json
backend/src/: index.ts
backend/src/config/: blockchain.ts
backend/src/routes/: maschain-wallet.ts
backend/src/services/: maschain-contracts.ts
dashboard/: index.html  index.txt
docs/: MASCHAIN_INTEGRATION_PLAN.md  PITCH_DECK.md  SETUP.md
iot-integration/: requirements.txt
iot-integration/meter-client/: meter_client.py
scripts/: deploy-maschain-contracts.ts  setup.sh
smart-contracts/: Cargo.toml
smart-contracts/energy-credit/: Cargo.toml
smart-contracts/energy-credit/src/: lib.rs
smart-contracts/energy-market/: Cargo.toml
smart-contracts/energy-market/src/: lib.rs
smart-contracts/energy-oracle/: Cargo.toml
smart-contracts/energy-oracle/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/dashboard/: page.tsx
src/components/: EnergyStats.tsx  MarketOverview.tsx  TradingDashboard.tsx
src/components/providers/: MasChainWalletProvider.tsx  WalletProvider.tsx
src/store/: energyStore.ts
(+1 files in other folders)
